# ERDISCanteenMenuTelegramBot

./: .gitignore  .replit  LICENSE  README.md  bot.py  data_base.py  main.py  menu.py  pyproject.toml  requirements.txt  run.sh
