[tool.poetry]
name = "erdiscanteenmenutelegrambot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
lxml = "^4.9.1"
beautifulsoup4 = "^4.11.1"
pymongo = "^4.3.3"
python-dotenv = "^0.21.0"
python-telegram-bot = "^13.15"
bs4 = "^0.0.1"
telegram = "^0.0.1"
GitPython = "^3.1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
